<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/dark_blue"
            android:id="@+id/item_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Item Name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:textColor="@color/dark_blue"
            android:id="@+id/expiry_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Expiry Date: YYYY-MM-DD"
            android:textSize="14sp" />

        <TextView
            android:textColor="@color/dark_blue"
            android:id="@+id/quantity_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:backgroundTint="@color/mint_green"
        android:backgroundTintMode="src_over"
        android:textColor="@color/dark_blue"
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_marginStart="16dp"/>

    <Button
        android:backgroundTint="@color/mint_green"
        android:backgroundTintMode="src_over"
        android:textColor="@color/dark_blue"
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:layout_marginStart="16dp"/>
</LinearLayout>
